fix: (Radio & Checkbox) support text wrapping (#4596)
* fix: (Radio) Support text wrapping

* fix: (Checkbox) Support text wrapping

--- a/src/components/radio/radio.less
+++ b/src/components/radio/radio.less
@@ -54,7 +54,7 @@
   }
 
   &-content {
-    flex: none;
+    flex: 0 1 auto;
     font-size: var(--font-size);
     padding-left: var(--gap);
   }
